src/test/resources/regression/verification/xlang/valid/Epsilon1.scala
/* Copyright 2009-2014 EPFL, Lausanne */

import leon.lang._

object Epsilon1 {

  def greater(x: Int): Int = {
    epsilon((y: Int) => y > x)
  } ensuring(_ >= x)

}
